WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99812
[V8] DOMObjectVisitor does nothing
https://bugs.webkit.org/show_bug.cgi?id=99812
Summary
[V8] DOMObjectVisitor does nothing
Adam Barth
Reported
2012-10-18 23:17:24 PDT
[V8] DOMObjectVisitor does nothing
Attachments
Patch
(2.54 KB, patch)
2012-10-18 23:18 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-10-18 23:18:34 PDT
Created
attachment 169554
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-18 23:24:20 PDT
Comment on
attachment 169554
[details]
Patch Rejecting
attachment 169554
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/bindings/v8/V8GCController.cpp Hunk #1 succeeded at 71 (offset 3 lines). Hunk #2 FAILED at 325. Hunk #3 succeeded at 435 (offset 3 lines). 1 out of 3 hunks FAILED -- saving rejects to file Source/WebCore/bindings/v8/V8GCController.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Kentaro Ha..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output:
http://queues.webkit.org/results/14462327
Dan Carney
Comment 3
2012-10-18 23:55:13 PDT
(In reply to
comment #0
)
> [V8] DOMObjectVisitor does nothing
I have no idea what the original intention of this was, but it may have been that the author wanted the ASSERT for V8DOMWrapper::maybeDOMWrapper in V8DOMWrapper::domWrapperType?
Adam Barth
Comment 4
2012-10-19 00:06:32 PDT
(In reply to
comment #3
)
> (In reply to
comment #0
) > > [V8] DOMObjectVisitor does nothing > > I have no idea what the original intention of this was, but it may have been that the author wanted the ASSERT for V8DOMWrapper::maybeDOMWrapper in V8DOMWrapper::domWrapperType?
It's possible, but as far as I know, this thing has never caught any bugs.
Adam Barth
Comment 5
2012-10-19 00:07:53 PDT
Comment on
attachment 169554
[details]
Patch Clearing flags on attachment: 169554 Committed
r131866
: <
http://trac.webkit.org/changeset/131866
>
Adam Barth
Comment 6
2012-10-19 00:07:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug