[V8] DOMObjectVisitor does nothing https://bugs.webkit.org/show_bug.cgi?id=99812

Reviewed by Kentaro Hara.

This code doesn't do anything, even in Debug! We should just remove it.

* bindings/v8/V8GCController.cpp:
(WebCore):
(WebCore::V8GCController::gcPrologue):
(WebCore::V8GCController::gcEpilogue):


Canonical link: https://commits.webkit.org/117802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131866 268f45cc-cd09-0410-ab3c-d52691b4dbfc